# noobtool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
apps/hevc_auto_encode/: Cargo.toml
apps/hevc_auto_encode/src/: main.rs
apps/hevc_batch_encode/: Cargo.toml
apps/hevc_batch_encode/src/: constants.rs  encoder.rs  lib.rs  main.rs  progress.rs
apps/hevc_batch_encode/tests/common/: mod.rs
apps/video_thumbnail/: Cargo.toml
apps/video_thumbnail/src/: generator.rs  lib.rs  main.rs
apps/video_thumbnail/tests/: cli.rs  ffmpeg.rs
apps/video_thumbnail/tests/common/: mod.rs
cli/: Cargo.toml
cli/src/: encode_video.rs  generate_video_thumbail.rs  lib.rs
crates/ffmpeg_utils/: Cargo.toml
crates/ffmpeg_utils/src/: encode.rs  errors.rs  lib.rs  metadata.rs  thumbnail.rs
crates/utils/: Cargo.toml
crates/utils/src/: cli.rs  constants.rs  file.rs  lib.rs  parse.rs  path.rs  webdriver.rs
ffmpeg_command_builder/: Cargo.toml
ffmpeg_command_builder/src/: lib.rs
ffmpeg_command_builder/tests/: ffmpeg.rs
ffmpeg_progress_monitor/: Cargo.toml  ffmpeg_progress_info.txt
ffmpeg_progress_monitor/src/: lib.rs
src/: encode_video.rs  generate_video_thumbnail.rs  main.rs
tests/: cli.rs  ffmpeg.rs
utils/: Cargo.toml
utils/src/: cli.rs  constants.rs  file.rs  format.rs  lib.rs  path.rs
video_encoder/: Cargo.toml
video_encoder/src/: config.rs  encoder.rs  error.rs  lib.rs  preset.rs
video_metadata/: Cargo.toml  ffprobe_output.txt
video_metadata/src/: lib.rs  metadata.rs  resolution.rs
video_thumbnail/: Cargo.toml
video_thumbnail/src/: error.rs  generator.rs  grid.rs  lib.rs
