[package]
name = "video_encoder"
version = "0.1.0"
edition.workspace = true

[dependencies]
video_metadata = { path = "../video_metadata", version = "*", package = "video_metadata" }
ffmpeg_progress_monitor = { path = "../ffmpeg_progress_monitor", version = "*", package = "ffmpeg_progress_monitor" }
ffmpeg_command_builder = { path = "../ffmpeg_command_builder", version = "*", package = "ffmpeg_command_builder" }
utils = { path = "../utils", version = "*", package = "utils" }
thiserror = "2"
