[package]
name = "video_thumbnail"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror = "2"
ffmpeg_progress_monitor = { path = "../ffmpeg_progress_monitor", version = "*", package = "ffmpeg_progress_monitor" }
ffmpeg_command_builder = { path = "../ffmpeg_command_builder", version = "*", package = "ffmpeg_command_builder" }
