[package]
name = "hevc_batch_encode"
version = "0.1.1"
edition.workspace = true

[dependencies]
utils = { path = "../../crates/utils", version = "*", package = "utils" }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
indicatif = "0.18"
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
