[package]
name = "video_thumbnail"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio-util = "0.7"
tokio = { version = "1.47",features=["rt"]}
ffmpeg_utils = { path = "../../crates/ffmpeg_utils", version = "*", package = "ffmpeg_utils" }
utils = { path = "../../crates/utils", version = "*", package = "utils" }
clap = { version = "4.5", features = ["derive"] }
